discord-bot/src/test/resources/cocos/guild/invalid/PrefixIsUnique.gld
configuration 12345L {
    prefix "prefix"
    prefix "prefix"
    blacklist "expression"
    subreddit "x" {
        channel : 0L
    }
    selfassignable "c" {
        role : 9L
    }
}
